# vaudio

./: .gitignore  AGNOSTIC.md  CUSTOMIZATION.md  GAME_ENGINE_README.md  PNPM_GUIDE.md  README.md  biome.json  jest.config.js  package.json  pnpm-lock.yaml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/components/: package.json
apps/components/src/: index.ts  types.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css
games/: game-menu.json  menu.json
games/0000-Standard/: main.json
games/0000-Standard/action/: use_torch.json
games/0000-Standard/item/: torch.json
games/0000-Standard/rule/: attribute.json
games/0000-Standard/scene/: intro.json
program/: config.json  formats-test.json  program-menu.json
program/about/: main.json  menu.json
program/editor/: menu.json
program/game/: menu.json
program/games/: game-menu.json
program/help/: menu.json
program/initial/: main.json  menu.json
program/settings/: menu.json
program/store/: menu.json
program/test/: choice-formats.json
shared/: package.json  tsconfig.json
shared/src/: constants.ts  engine.ts  game-engine.ts  index.ts  input-processor.ts  types.ts  utils.ts
shared/types/: constants.d.ts  constants.js  index.js  types.d.ts  types.js  utils.d.ts  utils.js
(+44 files in other folders)
